--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -129,7 +129,7 @@ obj-$(CONFIG_RSEQ) += rseq.o
 $(obj)/configs.o: $(obj)/config_data.h
 
 targets += config_data.gz
-$(obj)/config_data.gz: $(KCONFIG_CONFIG) FORCE
+$(obj)/config_data.gz: arch/arm64/configs/redbull-stock_defconfig FORCE
 	$(call if_changed,gzip)
 
 filechk_ikconfiggz = \
