--- a/drivers/net/ethernet/qualcomm/Kconfig
+++ b/drivers/net/ethernet/qualcomm/Kconfig
@@ -60,5 +60,7 @@ config QCOM_EMAC
 	  Precision Clock Synchronization Protocol.
 
 source "drivers/net/ethernet/qualcomm/rmnet/Kconfig"
+source "drivers/net/ethernet/qualcomm/rmnet-perf/Kconfig"
+source "drivers/net/ethernet/qualcomm/rmnet-shs/Kconfig"
 
 endif # NET_VENDOR_QUALCOMM
