kbuild: Don't call gcc-version if using clang
Remove gcc calls in vdso when clang is used and remove
the calls in the caf camera Makefiles.

Change-Id: I94842fe1f2623aad27a66bdfbbf7a752369e80ff
Signed-off-by: Jason Edson <jaysonedson@gmail.com>

--- a/arch/arm64/kernel/vdso32/Makefile
+++ b/arch/arm64/kernel/vdso32/Makefile
@@ -9,7 +9,7 @@ ARCH_REL_TYPE_ABS := R_ARM_JUMP_SLOT|R_ARM_GLOB_DAT|R_ARM_ABS32
 include $(srctree)/lib/vdso/Makefile
 
 # Same as cc-*option, but using CC_COMPAT instead of CC
-ifeq ($(CONFIG_CC_IS_CLANG), y)
+ifeq ($(or $(CONFIG_CC_IS_CLANG),$(LLVM)), 1)
 CC_COMPAT_CLANG_FLAGS := --target=$(notdir $(CROSS_COMPILE_COMPAT:%-=%))
 
 CC_COMPAT ?= $(CC)
